--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
-    "eslint": "^8.25.0"
+    "eslint": "^8.25.0",
+    "vercel": "^28.4.10"
   }
 }
